Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-13028

LNet Discovery: toggling discovery on/off is not handled properly

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.14.0
    • None
    • None
    • 3
    • 9223372036854775807

      • When a peer goes from discovery on to discovery off, it's possible that its NIs change, such that the list of NIs local to the node are no longer valid.
        • Before turning off discovery send a broadcast to all peers with the new status
        • When a node receives a peer's state with discovery off. It should just delete the existing peer
          • If the peer is being used for as a gateway, then allocate a new peer for the route
        • When sending to a peer fails, it should be flagged for rediscovery

            ashehata Amir Shehata (Inactive)
            ashehata Amir Shehata (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            4 Start watching this issue

              Created:
              Updated:
              Resolved: