lnet/include/lnet/lib-types.h
@@ -742,6 +742,9 @@ struct lnet_peer {
 /* gw has undergone discovery (does not indicate success or failure) */
 #define LNET_PEER_RTR_DISCOVERED (1 << 17)
 
+/* peer is marked for deletion */
+#define LNET_PEER_MARK_DELETION (1 << 18)
+
 struct lnet_peer_net {
 	/* chain on lp_peer_nets */
 	struct list_head	lpn_peer_nets;
